# tp-dcc

./: .gitignore  LICENSE  MANIFEST.in  QtSiteConfig.py  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_standalone.txt  setup.cfg  setup.py  setup_dev_env.bat  setup_dev_env_py310.bat  setup_dev_env_py37.bat  setup_dev_env_py39.bat  setup_dev_env_standalone.bat  setup_maya2025_venv.bat  tp_dcc_main.py
bootstrap/scripts/: tpdcc_cmd.py
config/env/: package_version.config  package_version_maya.config  package_version_standalone.config  preference_roots.config
dev/: README.md  pyproject.toml  ruff.toml
dev/config/env/: dev.yaml  preference_root.yaml
dev/cookiecutter/package/: cookiecutter.json
dev/cookiecutter/package/hooks/: post_gen_project.py
dev/cookiecutter/package/{{ cookiecutter.package_name }}/: Makefile  README.md  package.yaml  pyproject.toml
dev/cookiecutter/package/{{ cookiecutter.package_name }}/docs/: conf.py  index.md
dev/cookiecutter/package/{{ cookiecutter.package_name }}/scripts/: {{ cookiecutter.package_name }}.py
dev/scripts/: run_tool.py  venv_setup.py
scripts/: setup_env.bat  setup_env.py
tp/common/: hello.py
tp/core/: __init__.py  command.py  log.py  tool.py
tp/dcc/: __init__.py  callback.py  scene.py  ui.py
tp/math/: scalar.py
tp/maya/: command.py  consts.py  factory.py  spaceswitch.py  wrapper.py
tp/naming/: manager.py  token.py
tp/plugin/: __init__.py
tp/python/: decorators.py  fileio.py  folder.py  generators.py  helpers.py  modules.py  osplatform.py  paths.py  plugin.py  profiler.py  settings.py  strings.py  yamlio.py
tp/qt/: color.py  contexts.py  dpi.py  factory.py  icon.py  (+5 more)
(+173 files in other folders)
