[metadata]
name = tp-dcc
description = Python package that streamline DCC workflows.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/tpoveda/tp-dcc

[options]
zip_safe = false
include_package_data = true
packages=find:
setup_requires=
    setuptools>=40.8.0
    wheel

[options.packages.find]
exclude =
    tests

[options.extras_require]
dev =
    wheel

test =
    pytest
    flake8

[tool:pytest]
testpaths = tests

[bdist_wheel]
universal=1

[setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"